- https://github.com/eclipse-sirius/sirius-components/issues/1462[#1462] [diagram] Restore the missing hover / selected feedback on parametric SVG style
- [diagram] When clicking on a node in a diagram, the creation tools list is now always in the same order
- https://github.com/eclipse-sirius/sirius-components/issues/1485[#1485] [diagram] Select the relevant edge reconnection tools

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/1482[#1482] [core] Allow CustomImageLoader to get images from packaged projects. To import images from local files on startup, set `-Dorg.eclipse.sirius.web.customImages.pattern="file:///local/path/to/folder/with/files/**"`. To import images from a folder inside a packaged JAR, use `-Dorg.eclipse.sirius.web.customImages.pattern="classpath:path/in/jar/**"`. The syntax supports Ant-style path patterns.
- https://github.com/eclipse-sirius/sirius-components/issues/1517[#1517] [core] Remove the error for strings which are not marked as non-externalized

=== New Features

- https://github.com/eclipse-sirius/sirius-components/issues/1453[#1453] [diagram] Add new arrow styles Circle, FillCircle and CrossedCircle
- https://github.com/eclipse-sirius/sirius-components/issues/1364[#1364] [forms] Add support for a basic image widget
- https://github.com/eclipse-sirius/sirius-components/issues/1386[#1386] [project] Users can now upload their own images from a project's new settings page (available in the project menu). These images can be displayed in forms using the new image widget, or in View-based diagrams using and ImageNodeStyleDescription and selecting the image in the list of available shapes.