@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2022 Obeo.
+ * Copyright (c) 2021, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -117,6 +117,7 @@ export const workbenchMachine = Machine<WorkbenchContext, WorkbenchStateSchema, 
               UPDATE_SELECTION: {
                 target: 'initial',
                 actions: 'updateSelection',
+                cond: 'isNewSelection',
               },
               HIDE_REPRESENTATION: {
                 target: 'initial',
@@ -139,6 +140,17 @@ export const workbenchMachine = Machine<WorkbenchContext, WorkbenchStateSchema, 
     },
   },
   {
+    guards: {
+      isNewSelection: (context, event) => {
+        const updateSelectionEvent = event as UpdateSelectionEvent;
+        const isEqual =
+          context.selection.entries.length === updateSelectionEvent.selection.entries.length &&
+          context.selection.entries.every(
+            (value, index) => value.id === updateSelectionEvent.selection.entries[index].id
+          );
+        return !isEqual;
+      },
+    },
     actions: {
       updateSelection: assign((context, event) => {
         const { selection, representations: selectedRepresentations } = event as UpdateSelectionEvent;
